src/components/matching/Match.scss
.match {
  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);

  .portrait {
    width: 75px;
    height: 75px;
  }

  .col {
    height: 100%;
    line-height: 75px;

    div {
      height: 100%;
      line-height: 75px;
      text-align: center;
    }
  }

  .icon {
    width: 30px;
    height: 30px;
  }

  .name {
    vertical-align: center;

    h3 {
      height: 100%;
      line-height: 75px;
      text-align: center;
    }
  }
}

